expand example to cover the optional computed values
- optional_computed: # if value is not provided by the user, the default value is
NOT known at runtime, hence no default attribute can be set and to be
able to identify this behaviour the service provider needs to mark the proeprty
as x-terraform-optional-computed
- optional_computed_with_default: this computed value happens to be known at runtime,
so the service provider decides to document what the default value will be
if the client does not provide a value

Also, make it more clear the computed use cases:

- computed: the value of this computed property is not known at runtime (e,g: uuid, etc)
hence the default attribute is not present
- computed_with_default: the computed default value is known at runtime, hence
the service providers documents that behaviour via the default attribute

OpenAPI Refs that led to this design:
Default: https://swagger.io/docs/specification/describing-parameters#default
ReadOnly: https://swagger.io/docs/specification/data-models/data-types/#readonly-writeonly
