# examples/swaggercodegen/api/api/cdn.go
@@ -15,7 +15,7 @@ func ContentDeliveryNetworkCreateV1(w http.ResponseWriter, r *http.Request) {
 	if AuthenticateRequest(r, w) != nil {
 		return
 	}
-	err := validateExpectedHeaders(r.Header,"X-Request-Id", "User-Agent")
+	err := validateExpectedHeaders(r.Header, "X-Request-Id", "User-Agent")
 	if err != nil {
 		sendErrorResponse(http.StatusBadRequest, err.Error(), w)
 		return
@@ -105,8 +105,13 @@ func populateComputePropertiesCDN(cdn *ContentDeliveryNetworkV1) {
 	cdn.ObjectNestedSchemeProperty = &ContentDeliveryNetworkV1ObjectNestedSchemeProperty{
 		Name: "autogenerated name",
 	}
+	cdn.Computed = "some autogenerated value"
+	cdn.ComputedWithDefault = "computed value known at runtime"
 	if cdn.OptionalComputed == "" {
-		cdn.OptionalComputed = "some computed value"
+		cdn.OptionalComputed = "some autogenerated value for the optional property"
+	}
+	if cdn.OptionalComputedWithDefault == "" {
+		cdn.OptionalComputed = "some computed value known at runtime"
 	}
 }
 
